# cis452

./: .gitignore  README.md
example/smoker/: CMakeLists.txt  gv_semaphore.cpp  gv_semaphore.h  smoker.cpp
lab1/: .sample4.c.swo  a.out  sample2.c  sample2_original  sample2_original.c  sample_sample.txt
lab2/: .#sample2.c  .sample2.c.swp  .sample3.c.swp  a.out  sample2.c  sample3.c  simp  simp.cpp
lab3/: assignment.cpp  assignment_redux.cpp  sample1.c  sample2.c
lab4/: a.out  sample1.c  serv  server.cpp
lab5/: reader.cpp  shm_comm.h  writer.cpp
lab6/: lab6_a_edit.c
labs/: CMakeLists.txt
labs/lab1/: sample3.c  sample4.c
labs/lab10/: README.md  final  sample1.c
labs/lab11/: .main.cpp.kate-swp  main.cpp
labs/lab12/: main.cpp  our_ls
labs/lab12/sample/: man2stat.cpp  sample1.c  sample1.cpp  throwaway.c
labs/lab13/: hardJunk  our_ln  our_ln.cpp  sample1  sample1.c  sample1b  sample1b.c
labs/lab2/: sample1.c  sample4
labs/lab4/: sample2.cpp
labs/lab6/: final  lab6-final.c  lab6_a.c
labs/lab7/: lab7.c
labs/lab9/: ex1  final  lab9.cpp  latlng.h
project/projec3/cimp/: CMakeLists.txt  main.cpp
project/project1/: TermPrint.cpp
project/project2/: CMakeLists.txt  Node.h  arith_tester.cpp  evaluator.h  genarith.py  main  main.cpp
project/project3/: NewDuTest.py  main.cpp  main.py  proj3-2016-04-19 22:18:42-arch10.cis.gvsu.edu-campbjos.csv  proj3-2016-04-19-21:36:52-campbjos.csv  proj3-2016-04-19-22:27:35-arch10.cis.gvsu.edu-campbjos.csv  proj3-2016-04-20-20:54:09-arch10.cis.gvsu.edu-campbjos.csv  proj3-du.csv
week4/: cis452-week04.tex
(+8 files in other folders)
